--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns-tz": "^3.2.0",
     "googleapis": "^150.0.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
