--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,19 +11,18 @@
   "dependencies": {
     "date-fns-tz": "^3.2.0",
     "googleapis": "^150.0.1",
-    "next": "15.3.3",
+    "next": "14.1.0",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
